--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,4 +22,4 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Ant
-      run: ant -noinput -buildfile build-ci.xml jar
+      run: ant -noinput -buildfile build.sh jar
