--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,4 +22,7 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Ant
-      run: ant -noinput -buildfile Source\ Code\ Inspection/build.xml
+      # run: ant -noinput -buildfile Source\ Code\ Inspection/build.xml
+      run: |
+       chmod +x ./build.sh
+       ./build.sh
