--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,7 +22,4 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Ant
-      # run: ant -noinput -buildfile Source\ Code\ Inspection/build.xml
-      run: |
-       chmod +x ./build.sh
-       ./build.sh
+      run: ant -noinput -buildfile Source\ Code\ Inspection/build.xml
