--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -7,18 +7,40 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Source_Code_Inspection" default="default" basedir=".">
+<project name="Source_Code_Inspection" default="default" basedir="..">
     <description>Builds, tests, and runs the project Source Code Inspection.</description>
     <import file="nbproject/build-impl.xml"/>
 
-    <junit printsummary="yes" haltonfailure="yes">
-        <classpath>
-            <path refid="run.test.classpath" />
-            <fileset dir="${junit.dir}">
-                <include name="**/junit.jar" />
-            </fileset>
-        </classpath>
-    </junit>
+    <property name="src.dir" value="src" />
+    <property name="test.dir" value="test" />
+    <property name="build.dir" value="../build" />
+
+    <path id="classpath">
+        <fileset dir="lib">
+            <include name="*.jar" />
+        </fileset>
+        <pathelement location="${build.dir}" />
+    </path>
+
+    <target name="init">
+        <mkdir dir="${build.dir}" />
+    </target>
+
+    <target name="compile" depends="init">
+        <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="classpath" />
+    </target>
+
+    <target name="test" depends="compile">
+        <junit printsummary="yes" fork="true">
+            <classpath refid="classpath" />
+            <formatter type="plain" usefile="false" />
+            <batchtest todir="${build.dir}">
+                <fileset dir="${test.dir}">
+                    <include name="**/*Test.java" />
+                </fileset>
+            </batchtest>
+        </junit>
+    </target>
     <!--
 
     There exist several targets which are by default empty and which can be 
