--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -16,7 +16,7 @@
     <property name="build.dir" value="../build" />
 
     <path id="classpath">
-        <fileset dir="lib">
+        <fileset dir="../lib">
             <include name="*.jar" />
         </fileset>
         <pathelement location="${build.dir}" />
