--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -36,7 +36,7 @@
             <formatter type="plain" usefile="false" />
             <batchtest todir="${build.dir}">
                 <fileset dir="${test.dir}">
-                    <include name="test/br/calebe/ticketmachine/core/*Test.java" />
+                    <include name="*Test.java" />
                 </fileset>
             </batchtest>
         </junit>
