--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -13,7 +13,7 @@
 
     <property name="src.dir" value="src" />
     <property name="test.dir" value="test" />
-    <property name="build.dir" value="../build" />
+    <property name="build.dir" value="build" />
 
     <path id="classpath">
         <fileset dir="../lib">
@@ -36,7 +36,7 @@
             <formatter type="plain" usefile="false" />
             <batchtest todir="${build.dir}">
                 <fileset dir="${test.dir}">
-                    <include name="**/*Test.java" />
+                    <include name="br/calebe/ticketmachine/**/*Test.java" />
                 </fileset>
             </batchtest>
         </junit>
