--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -11,9 +11,9 @@
     <description>Builds, tests, and runs the project Source Code Inspection.</description>
     <import file="nbproject/build-impl.xml"/>
 
-    <property name="src.dir" value="Source\ Code\ Inspection/src" />
-    <property name="test.dir" value="Source\ Code\ Inspection/test" />
-    <property name="build.dir" value="Source\ Code\ Inspection/build" />
+    <property name="src.dir" value="src" />
+    <property name="test.dir" value="test" />
+    <property name="build.dir" value="build" />
 
     <path id="classpath">
         <fileset dir="../lib">
@@ -36,7 +36,7 @@
             <formatter type="plain" usefile="false" />
             <batchtest todir="${build.dir}">
                 <fileset dir="${test.dir}">
-                    <include name="br/calebe/ticketmachine/**/*Test.java" />
+                    <include name="Source Code Inspection/src/br/calebe/ticketmachine/**/*Test.java" />
                 </fileset>
             </batchtest>
         </junit>
