--- a/Source Code Inspection/nbproject/project.properties
+++ b/Source Code Inspection/nbproject/project.properties
@@ -29,10 +29,10 @@ dist.dir=dist
 dist.jar=${dist.dir}/Source_Code_Inspection.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hamcrest-core-1.3-javadoc.jar=C:\\Users\\rafae\\Downloads\\hamcrest-core-1.3-javadoc.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.junit_4.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -43,8 +43,11 @@ ${javac.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
-${javac.classpath}:\
-${build.classes.dir}
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.hamcrest-core-1.3-javadoc.jar}:\
+    ${libs.hamcrest.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
