--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -10,6 +10,18 @@
 <project name="Source_Code_Inspection" default="default" basedir=".">
     <description>Builds, tests, and runs the project Source Code Inspection.</description>
     <import file="nbproject/build-impl.xml"/>
+
+    <target name="test" depends="compile">
+        <junit printsummary="yes" fork="true">
+            <classpath refid="classpath" />
+            <formatter type="plain" usefile="false" />
+            <batchtest todir="${build.dir}">
+                <fileset dir="${test.dir}">
+                    <include name="**/*Test.java" />
+                </fileset>
+            </batchtest>
+        </junit>
+    </target>
     <!--
 
     There exist several targets which are by default empty and which can be 
