--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -11,6 +11,25 @@
     <description>Builds, tests, and runs the project Source Code Inspection.</description>
     <import file="nbproject/build-impl.xml"/>
 
+    <property name="src.dir" value="src" />
+    <property name="test.dir" value="test" />
+    <property name="build.dir" value="build" />
+
+    <path id="classpath">
+        <fileset dir="../lib">
+            <include name="*.jar" />
+        </fileset>
+        <pathelement location="${build.dir}" />
+    </path>
+
+    <target name="init">
+        <mkdir dir="${build.dir}" />
+    </target>
+
+    <target name="compile" depends="init">
+        <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="classpath" />
+    </target>
+
     <target name="test" depends="compile">
         <junit printsummary="yes" fork="true">
             <classpath refid="classpath" />
