--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -20,6 +20,7 @@
             <include name="*.jar" />
         </fileset>
         <pathelement location="${build.dir}" />
+        <pathelement location="lib\hamcrest-core-1.3-javadoc.jar" />
     </path>
 
     <target name="init">
