--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -37,7 +37,7 @@
             <formatter type="plain" usefile="false" />
             <batchtest todir="${build.dir}">
                 <fileset dir="${test.dir}">
-                    <include name="**/*Test.java" />
+                    <!-- <include name="**/*Test.java" /> -->
                 </fileset>
             </batchtest>
         </junit>
