--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -10,44 +10,31 @@
 <project name="Source_Code_Inspection" default="default" basedir=".">
     <description>Builds, tests, and runs the project Source Code Inspection.</description>
     <import file="nbproject/build-impl.xml"/>
+    
+    <!-- Run jUnit -->
+    <!-- Make sure these two libraries are included -->
+    <!-- <target name="junit" depends="resolve">
 
-    <property name="src.dir" value="src" />
-    <property name="test.dir" value="test" />
-    <property name="build.dir" value="build" />
+        <junit printsummary="yes" haltonfailure="no">
 
-    <path id="classpath">
-        <fileset dir="../lib">
-            <include name="*.jar" />
-        </fileset>
-        <pathelement location="${build.dir}" />
-        <pathelement location="lib\hamcrest-core-1.3-javadoc.jar" />
-    </path>
+            <classpath refid="test.path" />
+            <classpath location="${build.dir}" />
+                            
+            <classpath location="lib/junit-4.11.jar" />
+            <classpath location="lib/hamcrest-core-1.3.jar" />
+                
+            <test name="com.mkyong.test.TestMessage" 
+                haltonfailure="no" todir="${report.dir}" outfile="result">
+                <formatter type="plain" />
+                <formatter type="xml" />
+            </test>
 
-    <target name="init">
-        <mkdir dir="${build.dir}" />
-    </target>
-
-    <target name="compile" depends="init">
-        <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="classpath" />
-    </target>
-
-    <target name="test" depends="compile">
-        <junit printsummary="yes" fork="true">
-            <classpath refid="classpath" />
-            <formatter type="plain" usefile="false" />
-            <batchtest todir="${build.dir}">
-                <fileset dir="${test.dir}">
-                    <!-- <include name="**/*Test.java" /> -->
-                </fileset>
-            </batchtest>
         </junit>
-    </target>
+    </target> -->
     <!--
-
     There exist several targets which are by default empty and which can be 
     used for execution of your tasks. These targets are usually executed 
     before and after some main targets. They are: 
-
       -pre-init:                 called before initialization of project properties
       -post-init:                called after initialization of project properties
       -pre-compile:              called before javac compilation
@@ -61,24 +48,17 @@
       -pre-jar:                  called before JAR building
       -post-jar:                 called after JAR building
       -post-clean:               called after cleaning build products
-
     (Targets beginning with '-' are not intended to be called on their own.)
-
     Example of inserting an obfuscator after compilation could look like this:
-
         <target name="-post-compile">
             <obfuscate>
                 <fileset dir="${build.classes.dir}"/>
             </obfuscate>
         </target>
-
     For list of available properties check the imported 
     nbproject/build-impl.xml file. 
-
-
     Another way to customize the build is by overriding existing main targets.
     The targets of interest are: 
-
       -init-macrodef-javac:     defines macro for javac compilation
       -init-macrodef-junit:     defines macro for junit execution
       -init-macrodef-debug:     defines macro for class debugging
@@ -87,19 +67,15 @@
       run:                      execution of project 
       -javadoc-build:           Javadoc generation
       test-report:              JUnit report generation
-
     An example of overriding the target for project execution could look like this:
-
         <target name="run" depends="Source_Code_Inspection-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
         </target>
-
     Notice that the overridden target depends on the jar target and not only on 
     the compile target as the regular run target does. Again, for a list of available 
     properties which you can use, check the target you are overriding in the
     nbproject/build-impl.xml file. 
-
     -->
 </project>
