--- a/Source Code Inspection/nbproject/project.properties
+++ b/Source Code Inspection/nbproject/project.properties
@@ -29,10 +29,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Source_Code_Inspection.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.hamcrest-core-1.3-javadoc.jar=C:\\Users\\rafae\\Downloads\\hamcrest-core-1.3-javadoc.jar
+file.reference.hamcrest-core-1.3.jar=..\\lib\\hamcrest-core-1.3.jar
+file.reference.junit-4.13.2.jar=..\\lib\\junit-4.13.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,9 +47,7 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
