--- a/Source Code Inspection/nbproject/project.properties
+++ b/Source Code Inspection/nbproject/project.properties
@@ -49,8 +49,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
-    ${build.classes.dir}
+    ${libs.hamcrest.classpath}:\
+    ${build.classes.dir}:\
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
