--- a/Source Code Inspection/nbproject/project.properties
+++ b/Source Code Inspection/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.hamcrest-core-1.3.jar=..\\lib\\hamcrest-core-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${build.classes.dir}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.junit-4.13.2.jar}
 # Space-separated list of extra javac options
@@ -47,8 +48,7 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${build.classes.dir}:\
+    ${build.classes.dir}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
