--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -37,7 +37,7 @@
             <classpath location="${build.dir}" />
                             
             <classpath location="lib/junit-4.11.jar" />
-            <classpath location="lib/hamcrest-core-1.3.jar" /
+            <classpath location="lib/hamcrest-core-1.3.jar" />
             <formatter type="plain" usefile="false" />
             <batchtest todir="${build.dir}">
                 <fileset dir="${build.dir}">
