--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -31,29 +31,29 @@
         <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="classpath" />
     </target>
 
-    <target name="test" depends="compile">
+    <!-- <target name="test" depends="compile">
         <junit printsummary="yes" fork="true">
             <classpath refid="classpath" />
-            <classpath location="${build.dir}" />
-                            
-            <classpath location="lib/junit-4.11.jar" />
-            <classpath location="lib/hamcrest-core-1.3.jar" />
+             />
             <formatter type="plain" usefile="false" />
             <batchtest todir="${build.dir}">
-                <fileset dir="${build.dir}">
+                <fileset dir="${test.dir}">
                     <include name="**/*Test.java" /> 
                 </fileset>
             </batchtest>
         </junit>
-    </target>
+    </target> -->
     <!-- Run jUnit -->
     <!-- Make sure these two libraries are included -->
-    <!-- <target name="junit" depends="compile">
+    <target name="junit" depends="resolve">
 
         <junit printsummary="yes" haltonfailure="no">
 
             <classpath refid="test.path" />
-            >
+            <classpath location="${build.dir}" />
+                            
+            <classpath location="lib/junit-4.11.jar" />
+            <classpath location="lib/hamcrest-core-1.3.jar">
                 
             <test name="com.mkyong.test.TestMessage" 
                 haltonfailure="no" todir="${report.dir}" outfile="result">
@@ -62,7 +62,7 @@
             </test>
 
         </junit>
-    </target> -->
+    </target>
     <!--
     There exist several targets which are by default empty and which can be 
     used for execution of your tasks. These targets are usually executed 
