--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -53,7 +53,7 @@
             <classpath location="${build.dir}" />
                             
             <classpath location="lib/junit-4.11.jar" />
-            <classpath location="lib/hamcrest-core-1.3.jar">
+            <classpath location="lib/hamcrest-core-1.3.jar"/>
                 
             <test name="com.mkyong.test.TestMessage" 
                 haltonfailure="no" todir="${report.dir}" outfile="result">
