--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -45,7 +45,7 @@
     </target> -->
     <!-- Run jUnit -->
     <!-- Make sure these two libraries are included -->
-    <target name="junit" depends="init">
+    <target name="test" depends="init">
 
         <junit printsummary="yes" haltonfailure="no">
 
