--- a/Source Code Inspection/build.xml
+++ b/Source Code Inspection/build.xml
@@ -12,7 +12,7 @@
     <import file="nbproject/build-impl.xml"/>
 
     <property name="src.dir" value="src" />
-    <property name="test.dir" value="test" />
+    <property name="test.path" value="test" />
     <property name="build.dir" value="build" />
 
     <path id="classpath">
