--- a/Source Code Inspection/nbproject/project.properties
+++ b/Source Code Inspection/nbproject/project.properties
@@ -48,7 +48,9 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.hamcrest.classpath}:\
+    ${libs.junit_4.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
